<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_booking_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_id"
            android:textColor="#03A9F4"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_booking_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_booking_text"
            android:paddingStart="6dp"
            android:text="@string/_123456"
            android:textColor="#03A9F4"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_booking_text"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/date"
                    android:textColor="#039BE5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/time"
                    android:textColor="#039BE5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="@string/payment_status"
                    android:textColor="#039BE5"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="1" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30/04/2020"
                    android:textSize="16sp"
                    app:layout_columnWeight="2" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:00 - 12:00"
                    android:textSize="16sp"
                    app:layout_columnWeight="2" />

                <TextView
                    android:id="@+id/tv_payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Undue"
                    android:textSize="16sp"
                    app:layout_columnWeight="1" />

            </androidx.gridlayout.widget.GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place"
                    android:textColor="#039BE5"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_court"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="City#1, Venue#A, Court#1"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_on"
                    android:textColor="#039BE5"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_created_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/time_stamp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:backgroundTint="#EF5350"
                android:text="Cancel this booking"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>