<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#EF5350">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_booking_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking_id"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_booking_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_booking_text"
            android:paddingStart="6dp"
            android:text="@string/_123456"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_booking_text"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3"
                app:rowCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="Date:"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="Time:"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:text="Payment_status"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_columnWeight="1" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30/04/2020"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_columnWeight="2" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11:00 - 12:00"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_columnWeight="2" />

                <TextView
                    android:id="@+id/tv_payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Overdue"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:layout_columnWeight="1" />

            </androidx.gridlayout.widget.GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/place"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_court"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="City#1, Venue#A, Court#1"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_on"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_created_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/time_stamp"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- Useless button actually, its height will is 0, but to make sure the bookingAdapter can find this button in pending-->
            <Button
                android:id="@+id/cancelButton"
                android:layout_width="140dp"
                android:layout_height="0dp"/>

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>